Added simple tournament CRUD

--- a/Tournamental/Views/User/Login.cshtml
+++ b/Tournamental/Views/User/Login.cshtml
@@ -51,6 +51,9 @@
 <div>
     @Html.ActionLink("Register", "Registration", "User")
 </div>
+<div>
+    @Html.ActionLink("Forgot password", "ForgotPassword", "User")
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
