--- a/Tournamental/Views/Home/Index.cshtml
+++ b/Tournamental/Views/Home/Index.cshtml
@@ -3,40 +3,21 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+    <h1>Tournamental Service</h1>
+    <p class="lead">Our sevice is simple way to tournaments management. You can easily add a new one, edit existing one or just enjoy view of list of all already existing ones!</p>
+    
+    <p>Welcome @HttpContext.Current.User.Identity.Name!</p>
 
-<div class="row">
-    Welcome @HttpContext.Current.User.Identity.Name
-@if (Request.IsAuthenticated)
-{
-    using(Html.BeginForm("Logout", "User", FormMethod.Post, new { id = "logoutForm" }))
+    @if (Request.IsAuthenticated)
     {
-        <a href="javascript:document.getElementById('logoutForm').submit()">Logout</a>
+        using(Html.BeginForm("Logout", "User", FormMethod.Post, new { id = "logoutForm" }))
+        {
+            <button class="btn btn-primary btn-lg" href="javascript:document.getElementById('logoutForm').submit()">Logout</button>
+        }
     }
-}
-</div>
+    else
+    {
+        @Html.ActionLink("Login", "User", null, new { @class = "btn btn-primary btn-lg" })
+    }
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
 </div>
