--- a/Tournamental/Views/User/Login.cshtml
+++ b/Tournamental/Views/User/Login.cshtml
@@ -6,11 +6,17 @@
 
 <h2>Login</h2>
 
+@if (ViewBag.Message != null)
+{
+    <div class="alert alert-warning">
+        @ViewBag.Message
+    </div>
+}
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
