--- a/Tournamental/Views/Home/Index.cshtml
+++ b/Tournamental/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     }
     else
     {
-        @Html.ActionLink("Login", "User", null, new { @class = "btn btn-primary btn-lg" })
+        @Html.ActionLink("Login", "Login", "User", null, new { @class = "btn btn-primary btn-lg" })
     }
 
 </div>
